[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "wtforms>=3.2.1",
    "trafilatura>=2.0.0",
    "sqlalchemy>=2.0.41",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "openai>=1.97.0",
]
